updated card colors of Paladin and Cleric

--- a/css/card.less
+++ b/css/card.less
@@ -445,7 +445,7 @@
 }
 .Cleric{
     .spellCard{
-        @mainColor: #FDD835;
+        @mainColor: #aaa9ad;
         background-color: @mainColor;
         border-color: @mainColor;
         h1{
@@ -493,7 +493,7 @@
 }
 .Paladin{
     .spellCard{
-        @mainColor: #2196f3;
+        @mainColor: #cca43d;
         background-color: @mainColor;
         border-color: @mainColor;
         h1{
